plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.142'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

minecraft {
    mappings channel: 'parchment', version: '1.21.1-0.2.2+build.17'

    runs {
        client {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'forge.logging.console.level', 'debug'
            systemProperty 'forge.enabledGameTestNamespaces', mod_id

            args '--nogui'
            property 'forge.enabledGameTestNamespaces', mod_id
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            client()
            jvmArgs '--add-modules', 'jdk.incubator.void'
        }

        server {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'forge.logging.console.level', 'debug'
            systemProperty 'forge.enabledGameTestNamespaces', mod_id

            server()
            jvmArgs '--add-modules', 'jdk.incubator.void'
        }

        gameTestServer {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', mod_id

            server()
            jvmArgs '--add-modules', 'jdk.incubator.void'
        }
    }
}

sourceSets.main {
    resources {
        srcDirs += 'src/main/resources'
    }
}

repositories {
    maven {
        name = 'Minecraft Fortress'
        url = 'https://maven.neoforged.net/releases'
        content {
            includeGroup '*'
        }
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:24.1.0'
}

tasks.named('processResources') {
    var replaceProperties = [
            minecraft_version   : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neoform_version     : neoform_version,
            loader_version_range: loader_version_range,
            mod_id              : mod_id,
            mod_name            : mod_name,
            mod_license         : mod_license,
            mod_version         : mod_version,
            mod_group_id        : mod_group_id,
            mod_jar_url         : mod_jar_url ?: '',
            mod_credits         : mod_credits ?: ''
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforged.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

tasks.named('jar', JavaCompile) {
    archiveClassifier = 'sources'
}

tasks.named('gameTestServer') {
    workingDirectory(file('run'))
}

tasks.register('setup') {
    depends classes
}